Aggiunto il componente `PieChart`

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@seanalunni/style": "^4.0.2",
     "@seanalunni/vite-plugin-solid": "^1.0.3",
     "@types/node": "^25.0.3",
+    "csstype": "^3.2.3",
     "sass": "^1.97.0",
     "solid-ctrl-flow": "^5.0.1",
     "solid-js": "^1.9.5",
